# project-Cadify-Cpp

./: CMakeLists.txt  README.md  main.cpp  save.cpp  test.cpp
lib/include/: aag-function.h  align-function.h  calc-function.h  face-function.h  io-function.h  point-function.h
lib/src/: aag-function.cpp  align-function.cpp  calc-function.cpp  face-function.cpp  io-function.cpp  point-function.cpp
testFile/: 1.5T.step  2.5T.step  3T.step  6.5T.step
